tests/atest/rules/errors/return_in_test_case/test.robot
*** Test Cases ***
RETURN
    RETURN
    IF    $var
        RETURN
    ELSE
        RETURN
    END
    IF    $var    RETURN
    WHILE    $condition
        RETURN
    END
    FOR    ${var}  IN  1  2
        RETURN
    END
    TRY
        RETURN
    EXCEPT
        RETURN
    END
    GROUP
        RETURN
    END
    [Return]

*** Keywords ***
RETURN
    RETURN
